add play store link

--- a/index.html
+++ b/index.html
@@ -68,8 +68,6 @@
     <!-- Main -->
     <main class="main">
 
-
-
         <!-- Home Section -->
         <section class="home section" id="home">
             <img src="assets/1.png" alt="Device_home_image" class="home__img">
@@ -82,7 +80,7 @@
                 </p>
 
                 <div class="home__buttons">
-                    <a class="download" href="">
+                    <a class="download" href="https://play.google.com/store/apps/details?id=com.itssuryansh.docscanner">
                         Download <i class="uil uil-google-play"></i>
                     </a>
                 </div>
